backup/examples/core/errors/type_errors/16_todo.core.tao
// Undefined Variable Error
// Using a variable that is not defined in scope
// This error occurs when referencing an undefined identifier
// Example: using TODO as a placeholder for incomplete code
TODO
